@@ -1,3 +1,8 @@
+2015-07-29  Gavin Smith  <gavinsmith0123@gmail.com>
+
+	* tp/Texinfo/Convert/XSParagraph/XSParagraph.pm: Heed TEXINFO_XS
+	environmental variable.  Idea by Karl Berry.
+
 2015-07-28  Gavin Smith  <gavinsmith0123@gmail.com>
 
 	* tp/Texinfo/Convert/XSParagraph/xspara.c (add_text): Check for
